--- a/cpython/Tools/pyuap/pyuapsdk/pyuapsdk.csproj
+++ b/cpython/Tools/pyuap/pyuapsdk/pyuapsdk.csproj
@@ -97,60 +97,20 @@
       <Link>Redist\Debug\x86\_ctypes.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Release\pyuapapp.exe">
-      <Link>Redist\Retail\x86\pyuapapp.exe</Link>
+    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
+      <Link>Redist\Retail\x86\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Release\App.xbf">
-      <Link>Redist\Retail\x86\App.xbf</Link>
+    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
+      <Link>Redist\Retail\x86\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Release\MainPage.xbf">
-      <Link>Redist\Retail\x86\MainPage.xbf</Link>
+    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
+      <Link>Redist\Debug\x86\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartup\Release\pyuapstartup.exe">
-      <Link>Redist\Retail\x86\pyuapstartup.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartup\Release\pyuapstartup.winmd">
-      <Link>Redist\Retail\x86\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.dll">
-      <Link>Redist\Retail\x86\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Retail\x86\pyuapstartupStartupTask.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Debug\pyuapapp.exe">
-      <Link>Redist\Debug\x86\pyuapapp.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Debug\App.xbf">
-      <Link>Redist\Debug\x86\App.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapapp\Debug\MainPage.xbf">
-      <Link>Redist\Debug\x86\MainPage.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartup\Debug\pyuapstartup.exe">
-      <Link>Redist\Debug\x86\pyuapstartup.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartup\Debug\pyuapstartup.winmd">
-      <Link>Redist\Debug\x86\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.dll">
-      <Link>Redist\Debug\x86\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\Win32\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Debug\x86\pyuapstartupStartupTask.winmd</Link>
+    <Content Include="$(InputDir)\Win32\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
+      <Link>Redist\Debug\x86\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <!-- 
@@ -188,60 +148,20 @@
       <Link>Redist\Debug\x64\_ctypes.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Release\pyuapapp.exe">
-      <Link>Redist\Retail\x64\pyuapapp.exe</Link>
+    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
+      <Link>Redist\Retail\x64\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Release\App.xbf">
-      <Link>Redist\Retail\x64\App.xbf</Link>
+    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
+      <Link>Redist\Retail\x64\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Release\MainPage.xbf">
-      <Link>Redist\Retail\x64\MainPage.xbf</Link>
+    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
+      <Link>Redist\Debug\x64\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartup\Release\pyuapstartup.exe">
-      <Link>Redist\Retail\x64\pyuapstartup.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartup\Release\pyuapstartup.winmd">
-      <Link>Redist\Retail\x64\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.dll">
-      <Link>Redist\Retail\x64\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Retail\x64\pyuapstartupStartupTask.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Debug\pyuapapp.exe">
-      <Link>Redist\Debug\x64\pyuapapp.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Debug\App.xbf">
-      <Link>Redist\Debug\x64\App.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapapp\Debug\MainPage.xbf">
-      <Link>Redist\Debug\x64\MainPage.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartup\Debug\pyuapstartup.exe">
-      <Link>Redist\Debug\x64\pyuapstartup.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartup\Debug\pyuapstartup.winmd">
-      <Link>Redist\Debug\x64\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.dll">
-      <Link>Redist\Debug\x64\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\amd64\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Debug\x64\pyuapstartupStartupTask.winmd</Link>
+    <Content Include="$(InputDir)\amd64\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
+      <Link>Redist\Debug\x64\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <!-- 
@@ -279,97 +199,54 @@
       <Link>Redist\Debug\arm\_ctypes.pyd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Release\pyuapapp.exe">
-      <Link>Redist\Retail\arm\pyuapapp.exe</Link>
+    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Release\pyuapbackgroundservice.dll">
+      <Link>Redist\Retail\arm\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Release\App.xbf">
-      <Link>Redist\Retail\arm\App.xbf</Link>
+    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Release\pyuapbackgroundservice.winmd">
+      <Link>Redist\Retail\arm\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Release\MainPage.xbf">
-      <Link>Redist\Retail\arm\MainPage.xbf</Link>
+    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Debug\pyuapbackgroundservice.dll">
+      <Link>Redist\Debug\arm\pyuapbackgroundservice.dll</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartup\Release\pyuapstartup.exe">
-      <Link>Redist\Retail\arm\pyuapstartup.exe</Link>
+    <Content Include="$(InputDir)\arm\pyuapbackgroundservice\Debug\pyuapbackgroundservice.winmd">
+      <Link>Redist\Debug\arm\pyuapbackgroundservice.winmd</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartup\Release\pyuapstartup.winmd">
-      <Link>Redist\Retail\arm\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.dll">
-      <Link>Redist\Retail\arm\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartupStartupTask\Release\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Retail\arm\pyuapstartupStartupTask.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Debug\pyuapapp.exe">
-      <Link>Redist\Debug\arm\pyuapapp.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Debug\App.xbf">
-      <Link>Redist\Debug\arm\App.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapapp\Debug\MainPage.xbf">
-      <Link>Redist\Debug\arm\MainPage.xbf</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartup\Debug\pyuapstartup.exe">
-      <Link>Redist\Debug\arm\pyuapstartup.exe</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartup\Debug\pyuapstartup.winmd">
-      <Link>Redist\Debug\arm\pyuapstartup.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.dll">
-      <Link>Redist\Debug\arm\pyuapstartupStartupTask.dll</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="$(InputDir)\arm\pyuapstartupStartupTask\Debug\pyuapstartupStartupTask.winmd">
-      <Link>Redist\Debug\arm\pyuapstartupStartupTask.winmd</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="..\pyuapapp\lib.zip">
+    <!-- Neutral -->
+    <Content Include="..\pyuapbackgroundservice\lib.zip">
       <Link>References\CommonConfiguration\Neutral\lib.zip</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\pyuapstartup\pyuapstartup\Assets\Logo.scale-100.png">
-      <Link>References\CommonConfiguration\Neutral\Logo.scale-100.png</Link>
+    <Content Include="..\pyuapbackgroundservice\Assets\Logo.scale-100.png">
+      <Link>References\CommonConfiguration\Neutral\Assets\Logo.scale-100.png</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\pyuapstartup\pyuapstartup\Assets\SmallLogo.scale-100.png">
-      <Link>References\CommonConfiguration\Neutral\SmallLogo.scale-100.png</Link>
+    <Content Include="..\pyuapbackgroundservice\Assets\SmallLogo.scale-100.png">
+      <Link>References\CommonConfiguration\Neutral\Assets\SmallLogo.scale-100.png</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\pyuapstartup\pyuapstartup\Assets\SplashScreen.scale-100.png">
-      <Link>References\CommonConfiguration\Neutral\SplashScreen.scale-100.png</Link>
+    <Content Include="..\pyuapbackgroundservice\Assets\SplashScreen.scale-100.png">
+      <Link>References\CommonConfiguration\Neutral\Assets\SplashScreen.scale-100.png</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\pyuapstartup\pyuapstartup\Assets\StoreLogo.scale-100.png">
-      <Link>References\CommonConfiguration\Neutral\StoreLogo.scale-100.png</Link>
+    <Content Include="..\pyuapbackgroundservice\Assets\StoreLogo.scale-100.png">
+      <Link>References\CommonConfiguration\Neutral\Assets\StoreLogo.scale-100.png</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\pyuapstartup\pyuapstartup\Assets\WideLogo.scale-100.png">
-      <Link>References\CommonConfiguration\Neutral\WideLogo.scale-100.png</Link>
+    <Content Include="..\pyuapbackgroundservice\Assets\WideLogo.scale-100.png">
+      <Link>References\CommonConfiguration\Neutral\Assets\WideLogo.scale-100.png</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\pyuapstartup\pyuapstartup\pyuapstartup.vcxproj">
-      <Project>{616efb13-5e39-44a3-876b-9d9dfaacc583}</Project>
-      <Name>pyuapstartup</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\pyuapapp\pyuapapp.vcxproj">
-      <Project>{e8dee5bf-d7d3-43fc-982e-961345f695f9}</Project>
-      <Name>pyuapapp</Name>
+    <ProjectReference Include="..\pyuapbackgroundservice\pyuapbackgroundservice.vcxproj">
+      <Project>{98e552fa-8a1c-4916-b63b-ffa88936248c}</Project>
     </ProjectReference>
   </ItemGroup>
+
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
